# flavia-agent

./: .env.example  .gitignore  .spellcheck.dict.txt  CRITICAL_ISSUES_ANALYSIS.md  DEVELOPMENT_SUMMARY.md  FlaviaSpec.md  FlaviaSpec_Personal.md  PDCA_ANALYSIS.md  RAG_QUALITY_ANALYSIS.md  README.md  README_ja.md  SETUP_API_KEY.md  flavia_chat.py  main.py  pyproject.toml  run_app.py  run_simple_app.py  setup.sh  test_claude_api.py  test_flavia_direct.py  test_learning_system.py  test_new_rag_system.py  test_webfetch.py
docs/: AGENT_FLOW.md  AGENT_IMPROVEMENT.md  ARCHITECTURE.md  BlognoSouan.md  CORE_REQUIREMENTS.md  DEVELOPMENT_GUIDE.md  FlaviaSpec.md  IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md
flavia_agent/: __init__.py
flavia_agent/agent/: base.py  flavia.py
flavia_agent/ui/: streamlit_app.py
scripts/: run_app.sh
src/flavia/: __init__.py  assistant.py  data_manager.py  exceptions.py
src/flavia/core/: __init__.py  agent.py  cache_manager.py
src/flavia/core/agents/: __init__.py  base.py  personal.py
src/flavia/core/models/: __init__.py
src/flavia/core/services/: __init__.py  recipe_service.py
src/flavia/data/: personal_data.json
src/flavia/data/personal/: cooking_skills.txt  learning_log.txt  profile.txt
src/flavia/data/personal/learning/: adaptive_preferences.json  learning_events.json  user_feedback.json
src/flavia/monitoring/: __init__.py  performance_monitor.py
src/flavia/rag/: learning_system.py  preference_parser.py  sale_info_fetcher.py  smart_context_builder.py  web_sale_fetcher.py
src/flavia/ui/: __init__.py  app.py  simple_app.py  streamlit_app.py
src/flavia/utils/: __init__.py  error_handler.py  logging.py
src/flavia_agent/: exceptions.py
src/flavia_agent/agent/: base.py  flavia.py  personal_flavia.py
src/flavia_agent/data/models/: __init__.py  preferences.py  recipe.py
src/flavia_agent/data/personal/: context_memory.txt  health_goals.txt  meal_history.txt  preferences.txt  seasonal_notes.txt
src/flavia_agent/data/personal/learning/: adaptive_preferences.json  learning_events.json  user_feedback.json
src/flavia_agent/data/schemas/: __init__.py
src/flavia_agent/data/storage/: sale_cache.json
src/flavia_agent/rag/: __init__.py  context_builder.py  learning_system.py
src/flavia_agent/services/: recipe_service.py
src/flavia_agent/ui/: streamlit_app.py
src/flavia_agent/utils/: file_utils.py
tests/: test_agent.py  test_error_handling.py  test_integration.py  test_performance.py
tests/integration/: test_personal_flavia.py  test_real_webfetch.py  test_streamlit.py  test_webfetch_result.py
tests/unit/: test_agent.py
utils/: chat_helpers.py
